# low-latency-log

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  LICENSE-LOGFLUME  README.md
bench/: Cargo.toml
bench/src/: bench_fast_log.rs  bench_ftlog.rs  bench_it.rs  bench_spdlog.rs  fastlog_bench.rs  spdlog_bench.rs
bench/src/common/: fast_log_bench.rs  fastlog_bench.rs  ftlog_bench.rs  low_latency_log_bench.rs  mod.rs  spdlog_bench.rs
src/: bench.rs  bench_it.rs  bench_spdlog.rs  consts.rs  fmt_utils.rs  internal.rs  lib.rs  log_proxy.rs  macros.rs
