workspace = { members = ["bench"] }

[package]
name = "low_latency_log"
version = "0.2.0"
edition = "2021"
description = "Fast and Low Latency Logging Library for Rust"
license = "Apache-2.0"
repository = "https://github.com/WANG-lp/low-latency-log"

[dependencies]
chrono = "0.4"
core_affinity = "0.8"
log = { version = "0.4", features = ["std"] }
crossbeam-channel = "0.5"
once_cell = "1"
ufmt = "0.2"
symlink = "0.1.0"
gettid = "0.1"
cfg-if = "1.0"

[profile.release-opt]
inherits = "release"
opt-level = "z"

[features]
default = ["level-trace"]
level-off = []
level-error = []
level-warn = []
level-info = []
level-debug = []
level-trace = []
